--- a/nuxeo-features/nuxeo-automation/nuxeo-automation-io/pom.xml
+++ b/nuxeo-features/nuxeo-automation/nuxeo-automation-io/pom.xml
@@ -194,7 +194,7 @@
 
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
+      <artifactId>mockito-core</artifactId>
     </dependency>
 
     <dependency>
