--- a/nuxeo-features/nuxeo-automation/nuxeo-automation-test/pom.xml
+++ b/nuxeo-features/nuxeo-automation/nuxeo-automation-test/pom.xml
@@ -209,7 +209,7 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
+      <artifactId>mockito-core</artifactId>
     </dependency>
   </dependencies>
 
