--- a/nuxeo-jsf/nuxeo-platform-webapp-base/pom.xml
+++ b/nuxeo-jsf/nuxeo-platform-webapp-base/pom.xml
@@ -212,7 +212,7 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
+      <artifactId>mockito-core</artifactId>
     </dependency>
   </dependencies>
 
