--- a/nuxeo-core/nuxeo-core-convert/pom.xml
+++ b/nuxeo-core/nuxeo-core-convert/pom.xml
@@ -32,6 +32,18 @@
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+    </dependency>
 
     <!-- scope test -->
     <dependency>
