--- a/nuxeo-core/nuxeo-core-management-test/pom.xml
+++ b/nuxeo-core/nuxeo-core-management-test/pom.xml
@@ -16,6 +16,10 @@
     <!-- bundles -->
     <dependency>
       <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-runtime</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-runtime-management</artifactId>
     </dependency>
     <dependency>
@@ -33,6 +37,10 @@
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
     </dependency>
     <!--  tests -->
     <dependency>
