--- a/nuxeo-core/nuxeo-core-storage-sql/nuxeo-core-storage-sql-management/pom.xml
+++ b/nuxeo-core/nuxeo-core-storage-sql/nuxeo-core-storage-sql-management/pom.xml
@@ -23,6 +23,14 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-storage</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-storage-sql</artifactId>
     </dependency>
     <dependency>
