--- a/nuxeo-core/nuxeo-core-storage/pom.xml
+++ b/nuxeo-core/nuxeo-core-storage/pom.xml
@@ -62,6 +62,10 @@
       <artifactId>commons-io</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
