--- a/nuxeo-runtime/nuxeo-connect-standalone/pom.xml
+++ b/nuxeo-runtime/nuxeo-connect-standalone/pom.xml
@@ -42,6 +42,14 @@
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
 
     <!-- scope test -->
     <dependency>
@@ -54,6 +62,11 @@
     <!-- <artifactId>nuxeo-connect-client-wrapper</artifactId> -->
     <!-- <scope>test</scope> -->
     <!-- </dependency> -->
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
