--- a/nuxeo-runtime/nuxeo-runtime-datasource/pom.xml
+++ b/nuxeo-runtime/nuxeo-runtime-datasource/pom.xml
@@ -14,12 +14,20 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.nuxeo.common</groupId>
+      <artifactId>nuxeo-common</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-runtime</artifactId>
     </dependency>
     <dependency>
 	<groupId>org.apache.tomcat</groupId>
 	<artifactId>tomcat-jdbc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
@@ -60,6 +68,10 @@
       <artifactId>geronimo-connector</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>jta</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.apache.geronimo.components</groupId>
       <artifactId>geronimo-transaction</artifactId>
