--- a/nuxeo-core/nuxeo-core-convert-plugins/pom.xml
+++ b/nuxeo-core/nuxeo-core-convert-plugins/pom.xml
@@ -91,6 +91,14 @@
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
