--- a/nuxeo-core/nuxeo-core-persistence/pom.xml
+++ b/nuxeo-core/nuxeo-core-persistence/pom.xml
@@ -74,6 +74,11 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-storage-sql-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-test</artifactId>
       <scope>test</scope>
     </dependency>
