--- a/nuxeo-core/nuxeo-core-storage-mem/pom.xml
+++ b/nuxeo-core/nuxeo-core-storage-mem/pom.xml
@@ -21,6 +21,10 @@
       <artifactId>nuxeo-runtime</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-runtime-reload</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-schema</artifactId>
     </dependency>
