--- a/nuxeo-core/nuxeo-core-storage-sql/nuxeo-core-storage-sql-test/pom.xml
+++ b/nuxeo-core/nuxeo-core-storage-sql/nuxeo-core-storage-sql-test/pom.xml
@@ -72,7 +72,15 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-query</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-convert-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-storage</artifactId>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
