--- a/nuxeo-core/nuxeo-core/pom.xml
+++ b/nuxeo-core/nuxeo-core/pom.xml
@@ -82,6 +82,11 @@
 
     <dependency>
       <groupId>org.jmock</groupId>
+      <artifactId>jmock</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jmock</groupId>
       <artifactId>jmock-junit4</artifactId>
       <scope>test</scope>
     </dependency>
