--- a/nuxeo-runtime/nuxeo-runtime/pom.xml
+++ b/nuxeo-runtime/nuxeo-runtime/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>org.osgi.core</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
