NXP-16577 Integrate Redis implementation + refactor testing

--- a/nuxeo-core/nuxeo-core-cache/pom.xml
+++ b/nuxeo-core/nuxeo-core-cache/pom.xml
@@ -47,6 +47,11 @@
       <artifactId>nuxeo-core-api</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core</artifactId>
+    </dependency>
+
     <!-- test scope -->
     <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
