--- a/nuxeo-webengine/nuxeo-webengine-gwt/pom.xml
+++ b/nuxeo-webengine/nuxeo-webengine-gwt/pom.xml
@@ -43,6 +43,11 @@
       <optional>true</optional>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-codeserver</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
